--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,12 +18,18 @@ repos:
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
         language_version: python3.8
+        args: [--config=pyproject.toml]
 -   repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
-        args: ["--profile", "black", "--filter-files"]
+        args: ["--profile", "black", "--filter-files", "--settings-path=pyproject.toml"]
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.950'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
+-   repo: https://github.com/hadialqattan/pycln
+    rev: v0.0.1-beta.3
+    hooks:
+    -   id: pycln
+        args: [--config=pyproject.toml]
