--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,10 +18,12 @@ repos:
         # pre-commit's default_language_version, see
         # https://pre-commit.com/#top_level-default_language_version
         language_version: python3.8
+        args: [--config=pyproject.toml]
 -   repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
       - id: isort
+        files: "\\.(py)$"
         args: ["--profile", "black", "--filter-files", "--settings-path=pyproject.toml"]
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v0.950'  # Use the sha / tag you want to point at
