--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,8 +29,8 @@ repos:
     rev: 'v0.950'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
--   repo: https://github.com/hadialqattan/pycln
-    rev: v0.0.1-beta.3
-    hooks:
-    -   id: pycln
-        args: [--config=pyproject.toml]
+# -   repo: https://github.com/hadialqattan/pycln
+#     rev: v0.0.1-beta.3
+#     hooks:
+#     -   id: pycln
+#         args: [--config=pyproject.toml]
