--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ six==1.16.0
 toml==0.10.2
 tomli==2.0.1
 toolz==0.11.2
+typeguard==2.13.3
 types-requests==2.27.25
 types-urllib3==1.26.14
 typing_extensions==4.2.0
