--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ python-dotenv==0.20.0
 PyYAML==6.0
 ramda==0.7.4
 requests==2.27.1
+requests-toolbelt==0.9.1
 six==1.16.0
 toml==0.10.2
 tomli==2.0.1
