--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,21 @@
+[tool.poetry]
+name = "hyper_connect"
+version = "0.0.1"
+description = "python SDK package for hyper"
+authors = ["Trip Ottinger"]
+license = "Apache 2.0"
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+
+[tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+
 [tool.black]
 line-length = 79
 
